test1/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: app
spec:
  selector:
    app: cache
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
